# goldfish

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GITHUB_PAGES_SETUP.md  LICENSE-APACHE  LICENSE-MIT  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  openapi.yaml
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  connector_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
benchmark_data/tantivy_index/: .managed.json  meta.json
benchmark_suites/: PUBLISHING_POC.md  README.md
benchmark_suites/datasets/: sample_memories.jsonl  sample_queries.jsonl
benchmark_suites/results/: poc_publish_file_20260218_202652.json  poc_publish_file_20260218_202652.md  poc_publish_file_file_20260219_012913.json  poc_publish_file_file_20260219_012913.md  (+7 more)
docs/: CONNECTORS.md  GOLDFISH_VS_SPACEBOT_CONFIDENCE.md  INTEGRATION.md  ROADMAP.md
examples/: README.md  agent.rs  agent_cli.rs  basic.rs  benchmark.rs  benchmark_poc.rs  benchmark_suite.rs  chatbot.rs  comprehensive.rs  comprehensive_benchmark.rs  goldfish_client.py  js_client.js  lancedb_demo.rs  server.rs  simple.rs  vector_search_demo.rs
goldfish-server/: Cargo.toml  README.md
goldfish-server/examples/: client.py
goldfish-server/src/: api.rs  main.rs  models.rs  state.rs
migrations/: 001_initial.sql  002_cortex.sql
openclaw-goldfish-adapter/: README.md  demo.js  live-demo.js  package-lock.json  package.json
src/: benchmark_suites.rs  cache.rs  cli.rs  confidence.rs  cortex.rs  dashboard.rs  embedding.rs  error.rs  eval_harness.rs  hybrid_retrieval.rs  lib.rs  maintenance.rs  multimodal.rs  pulses.rs  search.rs  semantic_eval.rs  storage_backend.rs  storage_traits.rs  store.rs  synthesis.rs  temporal.rs  types.rs  vector_backend.rs  vector_search.rs  versioning.rs
(+14 files in other folders)
