[package]
name = "goldfish"
version = "0.1.0"
edition = "2021"
authors = ["Harsha Palnati <harshapalnati@gmail.com>"]
description = "A typed, graph-connected memory cortex for AI agents"
license = "MIT OR Apache-2.0"

[workspace]
members = [".", "goldfish-server"]

[features]
default = []
dashboard = ["dep:axum", "dep:tower-http"]

[dependencies]
tokio = { version = "1.44", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }
tracing = "0.1"
uuid = { version = "1.15", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
futures = "0.3"
clap = { version = "4.5", features = ["derive", "env", "color"] }
bincode = "1.3"
colored = "2.1"
async-trait = "0.1"
tantivy = "0.22"
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "agent"
path = "examples/agent.rs"

[[bin]]
name = "goldfish"
path = "src/cli.rs"
